docs/envoy/v1.11.0/_sources/api-v2/data/cluster/v2alpha/outlier_detection_event.proto.rst.txt
.. _envoy_api_file_envoy/data/cluster/v2alpha/outlier_detection_event.proto:

Outlier detection logging events
================================

:ref:`Outlier detection logging <arch_overview_outlier_detection_logging>`.

.. _envoy_api_msg_data.cluster.v2alpha.OutlierDetectionEvent:

data.cluster.v2alpha.OutlierDetectionEvent
------------------------------------------

`[data.cluster.v2alpha.OutlierDetectionEvent proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/data/cluster/v2alpha/outlier_detection_event.proto#L19>`_


.. code-block:: json

  {
    "type": "...",
    "timestamp": "{...}",
    "secs_since_last_action": "{...}",
    "cluster_name": "...",
    "upstream_url": "...",
    "action": "...",
    "num_ejections": "...",
    "enforced": "...",
    "eject_success_rate_event": "{...}",
    "eject_consecutive_event": "{...}"
  }

.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.type:

type
  (:ref:`data.cluster.v2alpha.OutlierEjectionType <envoy_api_enum_data.cluster.v2alpha.OutlierEjectionType>`) In case of eject represents type of ejection that took place.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.timestamp:

timestamp
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Timestamp for event.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.secs_since_last_action:

secs_since_last_action
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) The time in seconds since the last action (either an ejection or unejection) took place.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.cluster_name:

cluster_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The :ref:`cluster <envoy_api_msg_Cluster>` that owns the ejected host.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.upstream_url:

upstream_url
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The URL of the ejected host. E.g., ``tcp://1.2.3.4:80``.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.action:

action
  (:ref:`data.cluster.v2alpha.Action <envoy_api_enum_data.cluster.v2alpha.Action>`) The action that took place.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.num_ejections:

num_ejections
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If ``action`` is ``eject``, specifies the number of times the host has been ejected (local to
  that Envoy and gets reset if the host gets removed from the upstream cluster for any reason and
  then re-added).
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.enforced:

enforced
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If ``action`` is ``eject``, specifies if the ejection was enforced. ``true`` means the host was
  ejected. ``false`` means the event was logged but the host was not actually ejected.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_success_rate_event:

eject_success_rate_event
  (:ref:`data.cluster.v2alpha.OutlierEjectSuccessRate <envoy_api_msg_data.cluster.v2alpha.OutlierEjectSuccessRate>`) 
  
  
  Precisely one of :ref:`eject_success_rate_event <envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_success_rate_event>`, :ref:`eject_consecutive_event <envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_consecutive_event>` must be set.
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_consecutive_event:

eject_consecutive_event
  (:ref:`data.cluster.v2alpha.OutlierEjectConsecutive <envoy_api_msg_data.cluster.v2alpha.OutlierEjectConsecutive>`) 
  
  
  Precisely one of :ref:`eject_success_rate_event <envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_success_rate_event>`, :ref:`eject_consecutive_event <envoy_api_field_data.cluster.v2alpha.OutlierDetectionEvent.eject_consecutive_event>` must be set.
  


.. _envoy_api_msg_data.cluster.v2alpha.OutlierEjectSuccessRate:

data.cluster.v2alpha.OutlierEjectSuccessRate
--------------------------------------------

`[data.cluster.v2alpha.OutlierEjectSuccessRate proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/data/cluster/v2alpha/outlier_detection_event.proto#L90>`_


.. code-block:: json

  {
    "host_success_rate": "...",
    "cluster_average_success_rate": "...",
    "cluster_success_rate_ejection_threshold": "..."
  }

.. _envoy_api_field_data.cluster.v2alpha.OutlierEjectSuccessRate.host_success_rate:

host_success_rate
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Host’s success rate at the time of the ejection event on a 0-100 range.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierEjectSuccessRate.cluster_average_success_rate:

cluster_average_success_rate
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Average success rate of the hosts in the cluster at the time of the ejection event on a 0-100
  range.
  
  
.. _envoy_api_field_data.cluster.v2alpha.OutlierEjectSuccessRate.cluster_success_rate_ejection_threshold:

cluster_success_rate_ejection_threshold
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Success rate ejection threshold at the time of the ejection event.
  
  


.. _envoy_api_msg_data.cluster.v2alpha.OutlierEjectConsecutive:

data.cluster.v2alpha.OutlierEjectConsecutive
--------------------------------------------

`[data.cluster.v2alpha.OutlierEjectConsecutive proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/data/cluster/v2alpha/outlier_detection_event.proto#L100>`_


.. code-block:: json

  {}



.. _envoy_api_enum_data.cluster.v2alpha.OutlierEjectionType:

Enum data.cluster.v2alpha.OutlierEjectionType
---------------------------------------------

`[data.cluster.v2alpha.OutlierEjectionType proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/data/cluster/v2alpha/outlier_detection_event.proto#L48>`_

Type of ejection that took place

.. _envoy_api_enum_value_data.cluster.v2alpha.OutlierEjectionType.CONSECUTIVE_5XX:

CONSECUTIVE_5XX
  *(DEFAULT)* ⁣In case upstream host returns certain number of consecutive 5xx.
  If
  :ref:`outlier_detection.split_external_local_origin_errors<envoy_api_field_cluster.OutlierDetection.split_external_local_origin_errors>`
  is *false*, all type of errors are treated as HTTP 5xx errors.
  See :ref:`Cluster outlier detection <arch_overview_outlier_detection>` documentation for
  details.
  
  
.. _envoy_api_enum_value_data.cluster.v2alpha.OutlierEjectionType.CONSECUTIVE_GATEWAY_FAILURE:

CONSECUTIVE_GATEWAY_FAILURE
  ⁣In case upstream host returns certain number of consecutive gateway errors
  
  
.. _envoy_api_enum_value_data.cluster.v2alpha.OutlierEjectionType.SUCCESS_RATE:

SUCCESS_RATE
  ⁣Runs over aggregated success rate statistics from every host in cluster
  and selects hosts for which ratio of successful replies deviates from other hosts
  in the cluster.
  If
  :ref:`outlier_detection.split_external_local_origin_errors<envoy_api_field_cluster.OutlierDetection.split_external_local_origin_errors>`
  is *false*, all errors (externally and locally generated) are used to calculate success rate
  statistics. See :ref:`Cluster outlier detection <arch_overview_outlier_detection>`
  documentation for details.
  
  
.. _envoy_api_enum_value_data.cluster.v2alpha.OutlierEjectionType.CONSECUTIVE_LOCAL_ORIGIN_FAILURE:

CONSECUTIVE_LOCAL_ORIGIN_FAILURE
  ⁣Consecutive local origin failures: Connection failures, resets, timeouts, etc
  This type of ejection happens only when
  :ref:`outlier_detection.split_external_local_origin_errors<envoy_api_field_cluster.OutlierDetection.split_external_local_origin_errors>`
  is set to *true*.
  See :ref:`Cluster outlier detection <arch_overview_outlier_detection>` documentation for
  
  
.. _envoy_api_enum_value_data.cluster.v2alpha.OutlierEjectionType.SUCCESS_RATE_LOCAL_ORIGIN:

SUCCESS_RATE_LOCAL_ORIGIN
  ⁣Runs over aggregated success rate statistics for local origin failures
  for all hosts in the cluster and selects hosts for which success rate deviates from other
  hosts in the cluster. This type of ejection happens only when
  :ref:`outlier_detection.split_external_local_origin_errors<envoy_api_field_cluster.OutlierDetection.split_external_local_origin_errors>`
  is set to *true*.
  See :ref:`Cluster outlier detection <arch_overview_outlier_detection>` documentation for
  
  

.. _envoy_api_enum_data.cluster.v2alpha.Action:

Enum data.cluster.v2alpha.Action
--------------------------------

`[data.cluster.v2alpha.Action proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/data/cluster/v2alpha/outlier_detection_event.proto#L83>`_

Represents possible action applied to upstream host

.. _envoy_api_enum_value_data.cluster.v2alpha.Action.EJECT:

EJECT
  *(DEFAULT)* ⁣In case host was excluded from service
  
  
.. _envoy_api_enum_value_data.cluster.v2alpha.Action.UNEJECT:

UNEJECT
  ⁣In case host was brought back into service
  
  
